force-app/main/default/objects/Milestone__c/fields/Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Complete__c</fullName>
    <formula>IF(Total_Milestone_Todos__c &gt; 0, (Total_Complete_Milestone_Todos__c / Total_Milestone_Todos__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>