force-app/main/default/objects/Milestone__c/fields/Total_Complete_Milestone_Todos__c.field-meta.xml
<CustomField>
    <fullName>Total_Complete_Milestone_Todos__c</fullName>
    <label>Total Complete Milestone Todos</label>
    <summaryFilterItems>
        <field>Milestone_Todo__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Milestone_Todo__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>