force-app/main/default/objects/Milestone__c/fields/Total_Milestone_Todos__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Todos__c</fullName>
    <label>Total Milestone Todos</label>
    <summaryForeignKey>Milestone_Todo__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>